# MIMO-OFDM-Alamouti

./: CMakeLists.txt  CMakeLists.txt~  README.md
apps/designs/: FinalDesign.grc  MIMO_CHANNEL.grc  MYRADIO.grc  channel_coding.grc  channel_decoding.grc  mimo_usrp.grc  mimoofdmRX.grc  mimoofdmTX.grc  ofdm_mimo_USRP.grc  ofdm_mimo_noUSRP.grc  ofdm_mimo_rx.grc  ofdm_mimo_tx.grc  qpsk_mimo_demod.grc  qpsk_mimo_mod.grc  qpsk_mimo_usrp.grc  qpsk_preamble_remover.grc
cmake/Modules/: mimoConfig.cmake
docs/: README.mimo
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  mimo_alamouti_decode_cc.xml~  mimo_alamouti_encode_cc.xml  mimo_alamouti_encode_cc.xml~  mimo_alamouti_ofdm_rx.xml  mimo_alamouti_ofdm_rx.xml~  mimo_alamouti_ofdm_tx_cc.xml  mimo_alamouti_ofdm_tx_cc.xml~  mimo_ofdm_demapper.xml~  mimo_ofdm_insert_preamble_tagged.xml  mimo_ofdm_insert_preamble_tagged.xml~  mimo_ofdm_mapper.xml  mimo_ofdm_mapper.xml~  mimo_preamble_detector.xml  mimo_preamble_detector.xml~
include/mimo/: CMakeLists.txt  alamouti_decode_cc.h  alamouti_encode_cc.h  alamouti_ofdm_rx.h  alamouti_ofdm_tx_cc.h  api.h  ofdm_demapper.h  ofdm_insert_preamble_tagged.h  ofdm_mapper.h  preamble_detector.h
lib/: CMakeLists.txt  alamouti_decode_cc_impl.cc  alamouti_decode_cc_impl.h  alamouti_decode_cc_impl.h~  alamouti_encode_cc_impl.cc  alamouti_encode_cc_impl.cc~  alamouti_encode_cc_impl.h  alamouti_encode_cc_impl.h~  alamouti_ofdm_rx_impl.cc  alamouti_ofdm_rx_impl.cc~  alamouti_ofdm_rx_impl.h  alamouti_ofdm_rx_impl.h~  alamouti_ofdm_tx_cc_impl.cc  alamouti_ofdm_tx_cc_impl.cc~  alamouti_ofdm_tx_cc_impl.h  alamouti_ofdm_tx_cc_impl.h~  ofdm_demapper_impl.cc  ofdm_demapper_impl.cc~  ofdm_demapper_impl.h  ofdm_demapper_impl.h~  ofdm_insert_preamble_tagged_impl.cc  ofdm_insert_preamble_tagged_impl.cc~  ofdm_insert_preamble_tagged_impl.h  ofdm_mapper_impl.cc  ofdm_mapper_impl.cc~  ofdm_mapper_impl.h~  preamble_detector_impl.cc  preamble_detector_impl.h  preamble_detector_impl.h~  qa_mimo.cc  qa_mimo.h  test_mimo.cc
python/: CMakeLists.txt  __init__.py  qa_alamouti_decode_cc.py  qa_alamouti_decode_cc.py~  qa_alamouti_encode_cc.py  qa_alamouti_ofdm_rx.py  qa_alamouti_ofdm_tx_cc.py  qa_ofdm_demapper.py  qa_ofdm_insert_preamble_tagged.py  qa_ofdm_mapper.py  qa_preamble_detector.py
swig/: CMakeLists.txt  mimo_swig.i  mimo_swig.i~
